Add CP7 model support

--- a/custom_components/ezviz_hp7/manifest.json
+++ b/custom_components/ezviz_hp7/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "ezviz_hp7",
-  "name": "EZVIZ HP7",
+  "name": "EZVIZ HP7/CP7",
   "codeowners": ["@Bobsilvio"],
   "config_flow": true,
   "dependencies": [],
